--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -3,6 +3,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/colorPrimaryLight"
     android:minHeight="?attr/actionBarSize"
     android:fitsSystemWindows="true"
     app:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar" />
