--- a/app/src/main/res/layout/post_list_item.xml
+++ b/app/src/main/res/layout/post_list_item.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="5dp"
-    android:layout_margin="4dp"
+    android:layout_margin="2dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -51,7 +51,7 @@
             android:id="@+id/payout"
             tools:text="$398.49"
             android:gravity="center_vertical"
-            android:drawableLeft="@drawable/ic_upvote"
+            android:drawableStart="@drawable/ic_upvote"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/body"
             android:layout_width="wrap_content"
