--- a/app/src/main/res/layout/post_list_item.xml
+++ b/app/src/main/res/layout/post_list_item.xml
@@ -13,7 +13,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
+        <ImageView
+            android:id="@+id/profilePicture"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:layout_editor_absoluteY="8dp" />
+
+        <ImageView
+            android:id="@+id/previewImage"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="90dp"
+            android:layout_height="80dp" />
+
         <TextView
+            app:layout_constraintStart_toEndOf="@id/previewImage"
+            android:layout_marginStart="8dp"
             android:id="@+id/authorTextView"
             tools:text="sweetsssj"
             android:textStyle="bold"
@@ -30,20 +48,23 @@
 
         <TextView
             android:id="@+id/titleTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:textSize="14sp"
             android:textColor="#000000"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/previewImage"
             app:layout_constraintTop_toBottomOf="@id/authorTextView"
             tools:text="Travel with me #109 : Dolphin spotting in Hualien, Taiwan!" /> <!-- Every tools: attribute is ignored by compiler. -->
 
         <TextView
             android:id="@+id/body"
+            android:layout_marginStart="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/previewImage"
             app:layout_constraintTop_toBottomOf="@id/titleTextView"
             tools:text="Dear Steemit Friends: Today we're going to be exploring some of the coastal area of" /> <!-- Every tools: attribute is ignored by compiler. -->
 
