--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="toolbar_titletext_text_size">18dp</dimen>
     <dimen name="toolbar_subtitle_text_size">12dp</dimen>
+    <dimen name="separator_normal">4dp</dimen>
 </resources>
