--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="primaryColor">#fafafa</color>
     <color name="primaryLightColor">#ffffff</color>
     <color name="primaryDarkColor">#c7c7c7</color>
+    <color name="lineColor">#efefef</color>
     <color name="secondaryColor">#a5d6a7</color>
     <color name="secondaryLightColor">#d7ffd9</color>
     <color name="secondaryDarkColor">#75a478</color>
