--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -5,24 +5,24 @@
     <item
         android:id="@+id/nav_feed"
         android:title="@string/feed"
-        android:showAsAction="ifRoom"
         android:enabled="true"
-        android:icon="@drawable/ic_feed">
+        android:icon="@drawable/ic_feed"
+        app:showAsAction="ifRoom">
     </item>
 
     <item
         android:id="@+id/nav_blog"
         android:title="@string/blog"
-        android:showAsAction="ifRoom"
         android:enabled="true"
-        android:icon="@drawable/ic_pen">
+        android:icon="@drawable/ic_pen"
+        app:showAsAction="ifRoom">
     </item>
 
     <item
         android:id="@+id/nav_wallet"
         android:title="@string/wallet"
-        android:showAsAction="ifRoom"
         android:enabled="true"
-        android:icon="@drawable/ic_wallet">
+        android:icon="@drawable/ic_wallet"
+        app:showAsAction="ifRoom">
     </item>
 </menu>
