--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -36,8 +36,7 @@
                 android:id="@+id/markdownView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+                android:padding="8dp" />
 
         </ScrollView>
 
