--- a/app/src/main/res/drawable/ic_feed.xml
+++ b/app/src/main/res/drawable/ic_feed.xml
@@ -1,5 +1,16 @@
-<vector android:height="24dp" android:tint="#FFFFFF"
-    android:viewportHeight="24.0" android:viewportWidth="24.0"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M3,15h18v-2L3,13v2zM3,19h18v-2L3,17v2zM3,11h18L21,9L3,9v2zM3,5v2h18L21,5L3,5z"/>
+<?xml version="1.0" encoding="utf-8"?>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:tint="#FFFFFF"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+
+    <path android:pathData="M0 0h24v24H0z" />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M 6.18 15.64 C 7.38398075463 15.64 8.36 16.6160192454 8.36 17.82 C 8.36 19.0239807546 7.38398075463 20 6.18 20 C 4.97601924537 20 4 19.0239807546 4 17.82 C 4 16.6160192454 4.97601924537 15.64 6.18 15.64 Z" />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M4 4.44v2.83c7.03 0 12.73 5.7 12.73 12.73h2.83c0-8.59-6.97-15.56-15.56-15.56zm0 5.66v2.83c3.9 0 7.07 3.17 7.07 7.07h2.83c0-5.47-4.43-9.9-9.9-9.9z" />
 </vector>
